<resources>
    <string name="app_name">Villes de France</string>

    <!-- CityListActivity -->
    <string name="defaultCityName">Ville</string>
    <string name="citySearchBarHint">Ville</string>
    <string name="SearchButtonText">Rechercher</string>

    <!-- Forms -->
    <string name="name">Nom</string>
    <string name="postalCode">Code postal</string>
    <string name="inseeCode">Code INSEE</string>
    <string name="regionCode">Code région</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="remoteness">Éloignement</string>
    <string name="inhabitantNumber">Nombre d\'habitants</string>
    <string name="gps_coodinates">Coordonnées GPS</string>

    <string name="administration">Adminisration</string>
    <string name="geography">Géographie</string>
    
    <string name="create_city_title_edit_form">Création ville</string>
    <string name="update_city_title_edit_form">Modification ville</string>
    <string name="filter_title">Détails ville à afficher</string>

    <string name="fill_all_required_fields_error_message">Veuillez remplir tous les champs obligatoires (marqués par une *).</string>
    <string name="fill_all_required_fields_error_title">Champs obligatoires non remplis</string>


    <!-- Menu -->
    <string name="ajouter_une_ville">Ajouter une ville</string>
    <string name="editCityDetailsMenu">Modifier</string>
    <string name="deleteCityDetailsMenu">Supprimer</string>
    <string name="save">Sauvegarder</string>
    <string name="edit_preferences">Paramètres</string>

    <!-- Alert Messages -->
    <string name="no_network_error_message">Veuillez activer le Wi-fi ou les données mobiles.</string>
    <string name="no_network_error_title">Aucune connexion réseau</string>

    <string name="ok">OK</string>

    <!-- SharedPreferences -->
    <string name="prefs_app_previously_started">prefs_previously_started</string>

    <!-- Data operation -->
    <string name="city_successfully_created">a bien été créée</string>
    <string name="city_unsuccessfully_created"> n\'a pas pu être créée</string>

</resources>
